--- a/.gitignore
+++ b/.gitignore
@@ -95,19 +95,14 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
-target/
+# Temporary files
+*.tmp
+*.lock
 
-pom.xml.tag
-pom.xml.releaseBackup
-pom.xml.versionsBackup
-pom.xml.next
+# Gradle-specific exclusions
+.gradle/
+build/
 
-release.properties
-dependency-reduced-pom.xml
-buildNumber.properties
-.mvn/timing.properties
-.mvn/wrapper/maven-wrapper.jar
-.flattened-pom.xml
-
-# Common working directory
-run/
+# Gradle Wrapper
+gradle-wrapper.jar
+gradle-wrapper.properties
