--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,7 @@
-# User-specific stuff
-.idea/
+# Created by https://www.toptal.com/developers/gitignore/api/gradle,java
+# Edit at https://www.toptal.com/developers/gitignore?templates=gradle,java
 
-*.iml
-*.ipr
-*.iws
-
-# IntelliJ
-out/
-
+### Java ###
 # Compiled class file
 *.class
 
@@ -16,6 +10,9 @@ out/
 
 # BlueJ files
 *.ctxt
+
+# Mobile Tools for Java (J2ME)
+.mtj.tmp/
 
 # Package Files #
 *.jar
@@ -28,81 +25,33 @@ out/
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+replay_pid*
 
-*~
+### Gradle ###
+.gradle
+**/build/
+!src/**/build/
 
-# temporary files which can be created if a process still has a handle open of a deleted file
-.fuse_hidden*
+# Ignore Gradle GUI config
+gradle-app.setting
 
-# KDE directory preferences
-.directory
+# Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
+!gradle-wrapper.jar
 
-# Linux trash folder which might appear on any partition or disk
-.Trash-*
+# Avoid ignore Gradle wrappper properties
+!gradle-wrapper.properties
 
-# .nfs files are created when an open file is removed but is still being accessed
-.nfs*
+# Cache of project
+.gradletasknamecache
 
-# General
-.DS_Store
-.AppleDouble
-.LSOverride
+# Eclipse Gradle plugin generated files
+# Eclipse Core
+.project
+# JDT-specific (Eclipse Java Development Tools)
+.classpath
 
-# Icon must end with two \r
-Icon
+### Gradle Patch ###
+# Java heap dump
+*.hprof
 
-# Thumbnails
-._*
-
-# Files that might appear in the root of a volume
-.DocumentRevisions-V100
-.fseventsd
-.Spotlight-V100
-.TemporaryItems
-.Trashes
-.VolumeIcon.icns
-.com.apple.timemachine.donotpresent
-
-# Directories potentially created on remote AFP share
-.AppleDB
-.AppleDesktop
-Network Trash Folder
-Temporary Items
-.apdisk
-
-# Windows thumbnail cache files
-Thumbs.db
-Thumbs.db:encryptable
-ehthumbs.db
-ehthumbs_vista.db
-
-# Dump file
-*.stackdump
-
-# Folder config file
-[Dd]esktop.ini
-
-# Recycle Bin used on file shares
-$RECYCLE.BIN/
-
-# Windows Installer files
-*.cab
-*.msi
-*.msix
-*.msm
-*.msp
-
-# Windows shortcuts
-*.lnk
-
-# Temporary files
-*.tmp
-*.lock
-
-# Gradle-specific exclusions
-.gradle/
-build/
-
-# Gradle Wrapper
-gradle-wrapper.jar
-gradle-wrapper.properties
+# End of https://www.toptal.com/developers/gitignore/api/gradle,java
